static/styles/comm.css
/* ... */
@media only screen and (max-width: 960px) {
    .option h1 {
        padding: 10px;
        font-size: 24px;
    }

    .content-title {
        margin-top: 25px;
        margin-left: 6vw;
        margin-right: 6vw;
    }

    .content-title h1 {
        font-size: 36px;
    }

    .post-title-DE {
        box-shadow: inset 0 -17px 0 #F28500;
    }

    .post-title-TH {
        box-shadow: inset 0 -17px 0 #30f200;
    }

    .post-title-QU {
        box-shadow: inset 0 -17px 0 #7f24ff;
    }

    .content-author {
        margin-left: 6vw;
    }

    .content-author h2 {
        font-size: 16px;
    }

    .content-paragraph {
        margin-left: 6vw;
        margin-right: 6vw;
        font-size: 16px;
    }

    .header {
        display: none;
    }

    .mobile-header {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
        box-sizing: border-box;
    }

    .mobile-header h2 {
        padding: 1.2vw;
        font-size: 16px;
        text-align: center;
    }

    .mobile-header-shadow-DE {
        box-shadow: inset 0 -8px 0 #F28500;
    }

    .mobile-header-shadow-TH {
        box-shadow: inset 0 -8px 0 #30f200;
    }

    .mobile-header-shadow-QU {
        box-shadow: inset 0 -8px 0 #7f24ff;
    }

    .author-shadow-OR {
        box-shadow: inset 0 -1.7vw 0 #F28500;
    }
    
    .author-shadow-BL {
        box-shadow: inset 0 -1.7vw 0 #00baf2;
    }
    
    .author-shadow-GR {
        box-shadow: inset 0 -1.7vw 0 #0fb300;
    }
    
    .author-shadow-RE {
        box-shadow: inset 0 -1.7vw 0 #fb3a3a;
    }
    
    .author-shadow-PU {
        box-shadow: inset 0 -1.7vw 0 #5934ff;
    }
    
    .author-shadow-BR {
        box-shadow: inset 0 -1.7vw 0 #884A39;
    }
    
    .author-shadow-MA {
        box-shadow: inset 0 -1.7vw 0 #ac0000;
    }
    
    .author-shadow-DR {
        box-shadow: inset 0 -1.7vw 0 #025464;
    }

    .message {
        font-size: 10vw;
        margin: 5px 0 0px 15px;
        padding: 0;
    }
    
    .chatbar-container {
        padding: 0 0 27px 0;
        border-top: 5px solid #000;
        border-bottom: 5px solid #f28500;
    }

    .chat-bar {
        border-bottom: 5px solid #000;
    }

    .chat-bar button {
        width: 28px;
        margin-bottom: 0px;
        margin-right: 4.5%;
    }

    .chat-bar p {
        border: none;
        padding: 0;
        padding-top: 5px;
        padding-bottom: 5px;
        width: 100%;
        padding-right: 30px;
        font-weight: 600;
        margin: 0;
        padding-left: 4.5%;
    }

    .chat-bar p:focus {
        outline: 0;
        border-left: 5px solid #f28500;
    }
    
    .chat-bar p:read-write:focus {
        outline: none;
    }

    .typing-indicator {
        bottom: 2px;
        left: 10px;
        margin: 0;
    }

    .text {
        flex-direction: column;
    }

    .new-messages-alert {
        font-size: 4vw;
    }

    .disconnect-alert {
        font-size: 4vw;
        padding: 0 10px;
    }

    .disconnect-alert img {
        width: 4.5vw;
    }
}

@media only screen and (max-width: 860px) {
    .upload-container {
        display: flex;
        justify-content: center;
    }

    #case-input {
        width: 100%;
    }

}

@media only screen and (max-width: 640px) {
    .message {
        border: none;
    }

    .text {
        max-width: 95vw;
    }

    .message-score {
        display: none;
    }

    .message {
        font-size: 10vw;
        margin: 0px 0 0 5px;
    }

    .reply {
        font-size: 10px;
        text-indent: 0;
    }

    .reply-label {
        box-shadow: inset 0 -6px 0 #30f200;
    }

    .chat-bar p {
        padding-right: 5.5vw;
    }

    #dog-display {
        overflow-x: hidden;
    }

    .dogs {
        flex-direction: column;
        align-items: center;
        width: 100vw;
        height: 100%;
    }

    .dog {
        width: 100%;
        height: 100%;
        padding-top: 15px;
        padding-bottom: 15px;
    }

    #dog-influential .dog-title {
        border-top: 2vw solid #00baf2;
    }

    #dog-enemy .dog-title {
        border-top: 2vw solid #d60000;
    }

    .dog-user {
        display: flex;
        justify-content: center;
        font-size: 32px;
        max-width: 100vw;
    }

    .dog-title {
        font-size: 24px;
    }

    .dog-score {
        font-size: 48px;
    }
}

@media only screen and (max-width: 540px) {
    .case-upload form {
        width: 100%;
    }

    .case-upload input {
        font-size: 4.8vw;
    }

    .case-upload input[type="file"]::file-selector-button {
        font-size: 4.8vw;
    }

    .case-upload input[type="submit"] {
        font-size: 4.8vw;
        box-shadow: inset 0 -2.8vw 0 #F28500;
    }

}

@media only screen and (max-height: 605px) and (max-width: 640px) {
    .dog {
        flex: 1;
        padding-top: 2vh;
        padding-bottom: 2vh;
    }

    .dog-user {
        display: flex;
        justify-content: center;
        font-size: 5.3vh;
        max-width: 100vw;
    }

    .dog-title {
        font-size: 4vh;
    }

    .dog-score {
        font-size: 8vh;
    }
}

